--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -6,7 +6,7 @@
         {% for choice in question.choice_set.all %}
             <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
             <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
-            <h2>Hello world</h2>
+            <h2>Hello worlds!</h2>
             {% endfor %}
     </fieldset>
     <input type="submit" value="Vote">
